--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 version.py
-docs/
 # VS code
 .vscode/
 
@@ -163,3 +162,19 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Simulation outputs and temporary files
+*.arc
+*.xyz.out
+*.traj
+*.restart
+*.dump
+*.log
+*.colvars.traj
+*.pmf
+*.temp
+*.bak
+.DS_Store
+
+# Claude settings
+**/.claude/settings.local.json
